--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Acme Users Products</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+  <link rel="stylesheet" type="text/css" media="screen" href="./vendor/bootstrap/dist/css/bootstrap.css" />
   <script src="./dist/bundle.js" defer></script>
 </head>
 <body>
-  <div id="root">
+  <div class="container" id="root">
 
   </div>
 
